--- a/fe_nutriapp/android/app/src/main/res/layout/racha_widget.xml
+++ b/fe_nutriapp/android/app/src/main/res/layout/racha_widget.xml
@@ -11,11 +11,11 @@
     android:focusable="true"
     android:elevation="8dp">
 
-    <!-- Título NutriMama -->
+    <!-- Título NutriApp -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NutriMama"
+        android:text="NutriApp"
         android:textSize="14sp"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
